Entity Validations erros - Apresenta erro mesmo o objeto estando completo

--- a/MealControl/MealControl/Views/Cadastrados/Index.cshtml
+++ b/MealControl/MealControl/Views/Cadastrados/Index.cshtml
@@ -110,13 +110,13 @@
                                         <i class="fa fa-shopping-cart"></i> Data cadastro
                                     </th>
                                     <th>
-                                        <i class="fa fa-shopping-cart"></i> Detalhes
+                                        <i class="fa fa-shopping-cart"></i> Status
                                     </th>                                  
                                     <th>
-                                        <i class="fa fa-shopping-cart"></i> Atualizar
+                                        <i class="fa fa-shopping-cart"></i> Detalhes
                                     </th>
                                     <th>
-                                        <i class="fa fa-shopping-cart"></i> Status
+                                        <i class="fa fa-shopping-cart"></i> Alterar
                                     </th>
                                     <th></th>
                                 </tr>
