--- a/MealControl/MealControl/Views/Shared/_Layout.cshtml
+++ b/MealControl/MealControl/Views/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
     <script src="~/Scripts/angular-bootstrap.js"></script>
     <script src="~/Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>           
     <script src="~/Scripts/angular-ui/locale_pt-br.js"></script>     
-    <script src="~/Scripts/angular-ui/datetimepicker.js"></script>       
+    <script src="~/Scripts/angular-ui/datetimepicker.js"></script> 
+    <script src="~/Scripts/moment.js"></script>
     <script src="~/Scripts/angular-modules.js"></script>        
 
 </head>
