Erro EF Validation persiste mesmo ao criar um novo usuário apartir do objeto

--- a/MealControl/MealControl/Views/Cadastrados/Index.cshtml
+++ b/MealControl/MealControl/Views/Cadastrados/Index.cshtml
@@ -147,7 +147,7 @@
                                                 ng-model="parent.Status" ng-options="s as s.Description for s in statusList"></select>
                                     </td>
                                     <td>
-                                        <a ng-click="save(parent)" class="btn default btn-xs green">
+                                        <a ng-click="update(parent)" class="btn default btn-xs green">
                                             <i class="fa fa-save"></i> Salvar
                                         </a>
                                     </td>
