Versão 1.1 - Página perfil admin Cadastrados - OK

--- a/MealControl/MealControl/Views/Cadastrados/Index.cshtml
+++ b/MealControl/MealControl/Views/Cadastrados/Index.cshtml
@@ -111,7 +111,7 @@
                                     </th>
                                     <th>
                                         <i class="fa fa-shopping-cart"></i> Status
-                                    </th>                                  
+                                    </th>
                                     <th>
                                         <i class="fa fa-shopping-cart"></i> Detalhes
                                     </th>
@@ -134,8 +134,8 @@
                                         {{parent.UserName}}
                                     </td>
                                     <td>
-                                        {{parent.CreatedAt | convertToDate | date:'dd-MM-yyyy HH:mm'}}
-                                    </td>                                    
+                                        {{parent.CreatedAt}}
+                                    </td>
                                     <td>
                                         {{parent.Status.Description}}
                                     </td>
@@ -206,8 +206,8 @@
                                     <input type="text" ng-model="parent.Status.Description" class="form-control input-lg">
                                 </div>
                             </div>
-                        </div>                                                    
-                        
+                        </div>
+
                         <br />
                         <div class="row">
                             <!--TEL-->
@@ -242,7 +242,7 @@
                             <!--TEL FIM-->
                         </div>
                     </div>
-                </div>              
+                </div>
             </div>
             <!--FOM User END-->
             <!--FORM STUDENT BEGIN-->
