--- a/MealControl/MealControl/Views/Cadastro/Index.cshtml
+++ b/MealControl/MealControl/Views/Cadastro/Index.cshtml
@@ -2,9 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*<script src="~/Scripts/angular-ui/datetimepicker-config.js"></script>*@
-
 <script src="~/Scripts/directives/masks.directives.js"></script>
+<script src="~/Scripts/factories/factory.js"></script>
 <script src="~/Scripts/cadastro/cadastroApp.js"></script>
 
 <div ng-controller="cadastroCtrl">
