--- a/MealControl/MealControl/Views/Shared/_Layout.cshtml
+++ b/MealControl/MealControl/Views/Shared/_Layout.cshtml
@@ -8,13 +8,11 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta content="" name="description" />
     <meta content="" name="author" />
-    <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    @*<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css">*@
+    <!-- BEGIN GLOBAL MANDATORY STYLES -->    
     <link href="~/Content/themes/assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/themes/assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/themes/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/themes/assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css">
-    @*<link href="~/Content/themes/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />*@            
+    <link href="~/Content/themes/assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css">    
     
     <!-- BEGIN THEME STYLES -->
     <link href="~/Content/themes/assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
@@ -22,7 +20,7 @@
     <link href="~/Content/themes/assets/admin/layout2/css/layout.css" rel="stylesheet" type="text/css" />
     <link id="style_color" href="~/Content/themes/assets/admin/layout2/css/themes/grey.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/themes/assets/admin/layout2/css/custom.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.rawgit.com/zhaber/datetimepicker/master/datetimepicker.css" type="text/css" rel="stylesheet">    
+    @*<link href="https://cdn.rawgit.com/zhaber/datetimepicker/master/datetimepicker.css" type="text/css" rel="stylesheet">*@    
     <!-- END THEME STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
 
